@@ -9,7 +9,8 @@
 #endif
 
 /* If the platform provides any specific epilog actions,
-   like #pragmas, do include platform-specific prolog file */
+ * like #pragmas, do include platform-specific prolog file 
+ */
 #if defined (_STLP_HAS_SPECIFIC_PROLOG_EPILOG)
 # include <config/_epilog.h>
 #endif
@@ -20,13 +21,15 @@
 
 /* provide a mechanism to redefine std:: namespace in a way that is transparent to the 
  * user. _STLP_REDEFINE_STD is being used for wrapper files that include native headers
- * to temporary undef the std macro. */
+ * to temporary undef the std macro. 
+ */
 #if !defined(_STLP_USE_NAMESPACES) && \
     (defined(_STLP_USE_OWN_NAMESPACE) && !defined(_STLP_DONT_REDEFINE_STD) && !defined(_STLP_REDEFINE_STD))
+
 # define _STLP_REDEFINE_STD 1
 #endif
 
-#if defined (_STLP_REDEFINE_STD)
+#if !defined (_STLP_DONT_REDEFINE_STD)
 /*  We redefine "std" to "stlport", so that user code may use std:: transparently */
 # undef  std
 # define std STLPORT
